--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
   "dependencies": {
     "@angular/animations": "~9.0.1",
     "@angular/cdk": "^9.0.0",
-    "@angular/common": "~9.0.1",
+    "@angular/common": "^9.0.2",
     "@angular/compiler": "~9.0.1",
-    "@angular/core": "~9.0.1",
-    "@angular/forms": "~9.0.1",
+    "@angular/core": "^9.0.2",
+    "@angular/forms": "^9.0.2",
+    "@angular/localize": "^9.0.2",
     "@angular/material": "^9.0.0",
     "@angular/platform-browser": "~9.0.1",
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.0",
+    "angularfire2": "^5.4.2",
+    "firebase": "^7.9.0",
+    "ng-bootstrap-modal": "^1.1.19",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
